--- a/CD2010_01_First_Notebook.ipynb
+++ b/CD2010_01_First_Notebook.ipynb
@@ -3,7 +3,6 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "CD2010_FirstNotebook.ipynb",
       "provenance": [],
       "collapsed_sections": []
     },
@@ -23,9 +22,7 @@
         "id": "G6VJJfnQxo42"
       },
       "outputs": [],
-      "source": [
-        ""
-      ]
+      "source": []
     },
     {
       "cell_type": "markdown",
@@ -48,7 +45,7 @@
         "id": "CdpDermDzhTi",
         "outputId": "19bcc977-a64f-4c44-a08e-b4c6b02a9c9d"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -67,7 +64,7 @@
       "metadata": {
         "id": "r3EwEuRt15WJ"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -82,7 +79,7 @@
         "id": "KSjF24Z519Iz",
         "outputId": "2e242809-887c-4377-b4bf-f38922c95455"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -103,20 +100,38 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "y_XOjTBX5ZCj",
-        "outputId": "650d0d18-0aab-4b1a-b620-1471d0366476"
+        "outputId": "ed1ac6f1-78d2-413b-b139-0fc7ed9fbb7a"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Cloning into 'cd2010.100.2022'...\n",
-            "remote: Enumerating objects: 8, done.\u001b[K\n",
-            "remote: Counting objects: 100% (8/8), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (8/8), done.\u001b[K\n",
-            "remote: Total 8 (delta 1), reused 0 (delta 0), pack-reused 0\u001b[K\n",
-            "Unpacking objects: 100% (8/8), done.\n"
+            "fatal: destination path 'cd2010.100.2022' already exists and is not an empty directory.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git fetch cd2010.100.2022/cd2010.100.2022.git"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "10PwQyHpQ7YO",
+        "outputId": "b998a71d-5f55-4aa1-9b13-949947781f39"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "fatal: not a git repository (or any of the parent directories): .git\n"
           ]
         }
       ]
